@@ -58,9 +58,9 @@ std::string escape_string(const std::string &s, const std::string &esc);
 std::string escapewith_string(const std::string &s, const std::string &esc, const std::string &with);
 std::string lowercase(std::string s);
 std::string uppercase(std::string s);
-std::string replacewith_string(const std::string &s, const std::string &replace, const std::string &with);
+std::string replacewith_string(std::string str, const std::string &replace, const std::string &with);
+std::string replace_string(std::string str, const std::string& repl, const std::string& with)
 std::string cppesc_string(const std::string &s);
-std::string replace(std::string s, char match, char replace);
 int stringtoi(const std::string &s);
 std::string itostring(int i);
 std::string itohexstring(int i);
