@@ -7,6 +7,7 @@ menu (2.1.9-6) unstable; urgency=low
     - Don't segfault when there are syntax errors in translate_menus
       (Closes: #221757)
     - Unknown identifiers now generates a warning instead of an error.
+    - Implement a replace() function. Closes: #223948
 
  -- Bill Allombert <ballombe@debian.org>  Sat, 24 Jan 2004 19:45:43 +0100
 
